--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-input-mask": "^3.0.1",
+    "@types/uuid": "^8.3.4",
+    "@types/uuid4": "^2.0.0",
+    "mobx": "^6.3.13",
+    "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
+    "react-phone-number-input": "^3.1.45",
+    "react-player": "^2.9.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "sass": "^1.49.0",
+    "scss": "^0.2.4",
     "typescript": "^4.5.5",
+    "uuid": "^8.3.2",
+    "uuid4": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
